First custom popup implementation

--- a/app/src/main/res/layout/custom_popup.xml
+++ b/app/src/main/res/layout/custom_popup.xml
@@ -22,9 +22,9 @@
         android:fontFamily="@font/gothics"
         android:inputType="textMultiLine|textImeMultiLine"
         android:letterSpacing="0.34"
-        android:maxWidth="250"
+        android:maxWidth="250dp"
         android:singleLine="false"
-        android:text="MISSION OF BURMA\ EN CONCIERTO"
+        android:text="MISSION OF BURMA EN CONCIERTO"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="18sp"
